add_executable(test_EventLoop test_EventLoop.cpp)
target_link_libraries(test_EventLoop tcb_net)

add_executable(test_timerfd test_timerfd.cpp)
target_link_libraries(test_timerfd tcb_net)

add_executable(test_pendingFunctors test_pendingFunctors.cpp)
target_link_libraries(test_pendingFunctors tcb_net)

add_executable(test_EventLoopThread test_EventLoopThread.cpp)
target_link_libraries(test_EventLoopThread tcb_net)

add_executable(test_InetAddress test_InetAddress.cpp)
target_link_libraries(test_InetAddress tcb_net)